# server/routes/index.js
@@ -1,7 +1,9 @@
 const workoutRoutes = require('./workout');
+const processRoutes = require('./process')
 
 const init = function (app) {
-  app.use('/api/workout', workoutRoutes);
+  app.use('/api', workoutRoutes);
+  app.use('/api', processRoutes);
 }
 
 module.exports = {
